[ADD] 添加真机调试相关的经验

--- a/开发环境相关.md
+++ b/开发环境相关.md
@@ -1,2 +1,18 @@
+# 开发环境相关
+
 折腾开发环境永远是比较麻烦的  
 目前可以考虑直接使用 [AndroidStudio](http://tools.android-studio.org/index.php)，当前也可以简化一点，使用 `eclipse`，后者的话，就下个 [ADT Bundle](http://tools.android-studio.org/index.php) 这个也是比较省事儿的办法。
+
+## 无法连接 Android 设备
+
+如果使用 Mac 或者 Linux 的话，可能好一些，如果使用 Windows 的话，就可能容易有问题了。
+主要还是差一个 `adb_usb.ini`，里面记录了 `Vendor ID` 列表。
+
+从设备管理器里找 `Adb Interface` 的详细信息中，在下拉选项中找 `硬件 ID`，就可以看到：
+
+![](http://shjborage-public.qiniudn.com/2017-01-25-14853476826427.jpg)
+
+### Refs
+[Windows 下adb不能找到Android设备](http://www.xuebuyuan.com/1671106.html)  
+[Android下USB设备VID与PID获取及ADB设置](http://blog.csdn.net/xqhrs232/article/details/7353744)  
+[ADB无法找到Android设备](http://blog.csdn.net/wyl530274554/article/details/15497997)
