[ADD] 设计模式添加状态模式

--- a/Java/常见设计模式实现.md
+++ b/Java/常见设计模式实现.md
@@ -21,3 +21,10 @@ public class Singleton {
 
 ### Refs
 [快速理解Java中的五种单例模式](http://www.cnblogs.com/hupp/p/4487521.html)  
+
+## State模式（状态模式）
+
+其实就是一个 `state` 转换的模式，可以简单的 `if else` 来实现，也可以参考 `Refs` 中的说明，比较简单易懂。
+
+### Refs
+[【设计模式】学习笔记14：状态模式（State）](http://blog.csdn.net/shuangde800/article/details/10132825)
